crates/pink/macro/src/snapshots/pink_macro__tests__attr_not_a_list.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 39
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "call attribute must be a list" }

