crates/pink/macro/src/snapshots/pink_macro__tests__dup_id.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 154
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "Duplicate call id: 1" }

