crates/pink/macro/src/snapshots/pink_macro__tests__invalid_attr_tokens.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 68
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "expected `,`" }

