crates/pink/macro/src/snapshots/pink_macro__tests__invalid_id_value.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 88
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "Expected an integer" }

