crates/pink/macro/src/snapshots/pink_macro__tests__invalid_since.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 118
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "Expected a version string with format \"major.minor\"" }

