crates/pink/macro/src/snapshots/pink_macro__tests__multiple_mut_ref_args.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 166
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "Only one &mut ref argument is allowed" }

