crates/pink/macro/src/snapshots/pink_macro__tests__not_ident_args.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 144
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "Expected an identifier" }

