crates/pink/macro/src/snapshots/pink_macro__tests__unknown_attr.snap
---
source: crates/pink/macro/src/tests.rs
assertion_line: 133
expression: "rustfmt_snippet::rustfmt_token_stream(&stream).unwrap()"
---
compile_error! { "Unknown attribute: foo" }

